--- a/index.html
+++ b/index.html
@@ -4,14 +4,31 @@
   <meta charset="UTF-8">
   <title>Space Exploration</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <link rel="stylesheet" type="text/css" href="/reset.css">
-  <link rel="stylesheet" type="text/css" href="/main.css">
-  <link rel="stylesheet" href="/style/jquery.jscrollpane.css">
+  <link rel="stylesheet" type="text/css" href="reset.css">
+  <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="stylesheet" href="style/jquery.jscrollpane.css">
+  <link rel="apple-touch-icon" sizes="57x57" href="favicons/apple-touch-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="favicons/apple-touch-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="favicons/apple-touch-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="favicons/apple-touch-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="favicons/apple-touch-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="favicons/apple-touch-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="favicons/apple-touch-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="favicons/apple-touch-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon-180x180.png">
+  <link rel="icon" type="image/png" href="favicons/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="favicons/android-chrome-192x192.png" sizes="192x192">
+  <link rel="icon" type="image/png" href="favicons/favicon-96x96.png" sizes="96x96">
+  <link rel="icon" type="image/png" href="favicons/favicon-16x16.png" sizes="16x16">
+  <link rel="manifest" href="favicons/manifest.json">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="msapplication-TileImage" content="favicons/mstile-144x144.png">
+  <meta name="theme-color" content="#ffffff">
 </head>
 <body>
   <div id="header" class="header">
     <a href="javascript:;">
-      <img src="/images/logo.png" alt="SpacePlatforms" class="logo floatL">
+      <img src="images/logo.png" alt="SpacePlatforms" class="logo floatL">
     </a>
     <div class="nav floatR">
       <ul class="navList">
@@ -1011,13 +1028,13 @@
       </div>
     </div>
   </div>
-  <script type="text/javascript" src="/script/jquery-2.1.4.min.js"></script>
-  <script type="text/javascript" src="/script/jquery.mousewheel.js"></script>
-  <script type="text/javascript" src="/script/mwheelIntent.js"></script>
-  <script type="text/javascript" src="/script/jquery.jscrollpane.min.js"></script>
-  <script type="text/javascript" src="/script/velocity.min.js"></script>
-  <script type="text/javascript" src="/script/velocity.ui.js"></script>
-  <script type="text/javascript" src="/lib/snap.svg-min.js"></script>
-  <script type="text/javascript" src="/main.js"></script>
+  <script type="text/javascript" src="script/jquery-2.1.4.min.js"></script>
+  <script type="text/javascript" src="script/jquery.mousewheel.js"></script>
+  <script type="text/javascript" src="script/mwheelIntent.js"></script>
+  <script type="text/javascript" src="script/jquery.jscrollpane.min.js"></script>
+  <script type="text/javascript" src="script/velocity.min.js"></script>
+  <script type="text/javascript" src="script/velocity.ui.js"></script>
+  <script type="text/javascript" src="lib/snap.svg-min.js"></script>
+  <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
