--- a/index.html
+++ b/index.html
@@ -911,14 +911,14 @@
             <circle fill-rule="evenodd" clip-rule="evenodd" fill="#8930BD" cx="264.2" cy="139.1" r="3"/>
             <circle fill-rule="evenodd" clip-rule="evenodd" fill="#5C3FC9" cx="253.2" cy="139.1" r="3"/>
             <circle fill-rule="evenodd" clip-rule="evenodd" fill="#394CD3" cx="242.2" cy="139.1" r="3"/>
-            <text transform="matrix(1 0 0 1 223.7343 119.9265)" fill="#646262" font-family="'ArialMT'" font-size="26">Weight</text>
-            <text transform="matrix(1 0 0 1 425.0044 119.9265)" fill="#646262" font-family="'ArialMT'" font-size="26">Economy</text>
-            <text transform="matrix(1 0 0 1 217.9261 190.4225)" fill="#646262" font-family="'ArialMT'" font-size="26">Landing</text>
-            <text transform="matrix(1 0 0 1 427.8925 190.4221)" fill="#646262" font-family="'ArialMT'" font-size="26">Software</text>
-            <text transform="matrix(1 0 0 1 226.6023 331.4131)" fill="#646262" font-family="'ArialMT'" font-size="26">Height</text>
-            <text transform="matrix(1 0 0 1 432.2154 331.4133)" fill="#646262" font-family="'ArialMT'" font-size="26">Balance</text>
-            <text transform="matrix(1 0 0 1 213.616 260.9178)" fill="#646262" font-family="'ArialMT'" font-size="26">Capacity</text>
-            <text transform="matrix(1 0 0 1 450.2738 260.9174)" fill="#646262" font-family="'ArialMT'" font-size="26">Load</text>
+            <text transform="matrix(1 0 0 1 223.7343 119.9265)" fill="#646262" font-family="'Arial'" font-size="26">Weight</text>
+            <text transform="matrix(1 0 0 1 425.0044 119.9265)" fill="#646262" font-family="'Arial'" font-size="26">Economy</text>
+            <text transform="matrix(1 0 0 1 217.9261 190.4225)" fill="#646262" font-family="'Arial'" font-size="26">Landing</text>
+            <text transform="matrix(1 0 0 1 427.8925 190.4221)" fill="#646262" font-family="'Arial'" font-size="26">Software</text>
+            <text transform="matrix(1 0 0 1 226.6023 331.4131)" fill="#646262" font-family="'Arial'" font-size="26">Height</text>
+            <text transform="matrix(1 0 0 1 432.2154 331.4133)" fill="#646262" font-family="'Arial'" font-size="26">Balance</text>
+            <text transform="matrix(1 0 0 1 213.616 260.9178)" fill="#646262" font-family="'Arial'" font-size="26">Capacity</text>
+            <text transform="matrix(1 0 0 1 450.2738 260.9174)" fill="#646262" font-family="'Arial'" font-size="26">Load</text>
           </g>
           </svg>
         </div>
